<resources>
    <string name="app_name">MAD</string>
    <string name="select_address">Select Address</string>
    <string name="order_will_be_delivered_to_selected_address">Order will be delivered to selected address</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone_no">Phone No</string>
    <string name="adding">Adding</string>
    <string name="confirm_to_deliver">Confirm to deliver</string>
</resources>